--- a/.hintrc
+++ b/.hintrc
@@ -27,7 +27,8 @@
     "axe/text-alternatives": [
       "default",
       {
-        "image-alt": "off"
+        "image-alt": "off",
+        "frame-title": "off"
       }
     ],
     "disown-opener": "off",
