--- a/.env
+++ b/.env
@@ -1,3 +1,23 @@
+# MAIL_USERNAME=bernardomuse22@gmail.com
+# MAIL_PASSWORD=siwn jupq lylo lenc
+# MAIL_DEFAULT_SENDER=bernardomuse22@gmail.com
+# GOOGLE_CLIENT_ID=95604784685-1dt7fvh3is7caas2r7m3o3qtfnlb8gm2.apps.googleusercontent.com
+# GOOGLE_CLIENT_SECRET=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
+# SQLALCHEMY_DATABASE_URI=postgresql://postgres:5599@127.0.0.1:5432/socketio
+# SQLALCHEMY_TRACK_MODIFICATIONS=False
+# SECRET_KEY=iam-gygs
+# ADMIN_SECRET_CODE = supersecretcode
+# SUPER_ADMIN_EMAIL = bernardomuse22@gmail.com
+# DATABASE_URL=postgresql://postgres:5599@127.0.0.1:5432/socketio
+# DB_NAME=socketio
+# DB_USER=postgres
+# DB_PASSWORD=5599
+# DB_HOST=127.0.0.1
+# DB_PORT=5432
+# SESSION_PERMANENT = True 
+
+
+
 MAIL_USERNAME=bernardomuse22@gmail.com
 MAIL_PASSWORD=siwn jupq lylo lenc
 MAIL_DEFAULT_SENDER=bernardomuse22@gmail.com
@@ -6,14 +26,17 @@ GOOGLE_CLIENT_SECRET=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
 SQLALCHEMY_DATABASE_URI=postgresql://postgres:5599@127.0.0.1:5432/socketio
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 SECRET_KEY=iam-gygs
-ADMIN_SECRET_CODE = supersecretcode
-SUPER_ADMIN_EMAIL = skmasika@gmail.com
-DATABASE_URL=postgresql://postgres:5599@127.0.0.1:5432/socketio
+ADMIN_SECRET_CODE=supersecretcode
+SUPER_ADMIN_EMAIL=bernardomuse22@gmail.com
 DB_NAME=socketio
 DB_USER=postgres
 DB_PASSWORD=5599
 DB_HOST=127.0.0.1
 DB_PORT=5432
-SESSION_PERMANENT = True 
+SESSION_PERMANENT=True
+CELERY_BROKER_URL=redis://localhost:6379/0
+CELERY_RESULT_BACKEND=redis://localhost:6379/0
+
+
 
 
