--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "bernardomuse",
         "blogpage",
         "dotenv",
+        "fromlist",
         "Hazina",
         "Interlectial",
         "jsonify",
