--- a/requirements.txt
+++ b/requirements.txt
@@ -1,126 +1,67 @@
-absl-py==2.1.0
+
+
+
+
+
+
+absl-py==2.1.0 # Might be a transitive dependency, keep if unsure
 alembic==1.14.0
-amqp==5.3.1
-aniso8601==9.0.1
-astunparse==1.6.3
 Authlib==1.3.2
-autopep8==2.3.1
 babel==2.16.0
 bcrypt==4.2.1
 beautifulsoup4==4.12.3
-bidict==0.23.1
-billiard==4.2.1
 blinker==1.8.2
-bs4==0.0.2
 cachelib==0.9.0
 cachetools==5.5.0
-celery==5.4.0
 certifi==2024.8.30
-cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
 colorama==0.4.6
-contourpy==1.3.0
 cryptography==43.0.1
 cssselect==1.2.0
 cssutils==2.11.1
-cycler==0.12.1
-Cython==3.0.11
 decorator==5.1.1
 dnspython==2.7.0
-dominate==2.9.1
-EasyProcess==1.1
 email_validator==2.2.0
-entrypoint2==1.1
 Flask==3.0.3
-Flask-Admin==1.6.1
+Flask-Admin==1.6.1 # Remove if not using Flask-Admin
 Flask-Alembic==3.1.1
 flask-babel==4.0.0
 Flask-Bcrypt==1.0.1
 Flask-Bootstrap==3.3.7.1
 Flask-Caching==2.3.0
 Flask-Cors==5.0.0
-Flask-JWT==0.3.2
-Flask-JWT-Extended==4.6.0
+Flask-JWT-Extended==4.6.0 # Remove if not using JWT
 Flask-Login==0.6.3
-Flask-Mail==0.10.0
+Flask-Mail==0.10.0 # Remove if not sending emails
 Flask-Migrate==4.0.7
-Flask-Moment==1.0.6
-Flask-RESTful==0.3.10
-Flask-Script==2.0.6
-Flask-Session==0.8.0
-Flask-SocketIO==5.4.1
-Flask-SQLAlchemy==3.1.1
+Flask-Moment==1.0.6 # Remove if not using moment.js
+Flask-RESTful==0.3.10 # Remove if not building a RESTful API
+Flask-SQLAlchemy==3.1.1 # If you are using SQLAlchemy for database interactions. If not, remove and the psycopg2 line below
 Flask-SSE==1.0.0
 Flask-Uploads==0.2.1
-flask-utils==0.1.1
 Flask-WTF==1.2.1
-flatbuffers==24.3.25
-fonttools==4.54.1
-future==1.0.0
-gast==0.6.0
-geocoder==1.38.1
-gevent==24.2.1
-gevent-websocket==0.10.1
-google-auth==2.35.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.1
-google-pasta==0.2.0
-googleapis-common-protos==1.65.0
-greenlet==3.1.1
-grpcio==1.66.2
 gunicorn==23.0.0
 h11==0.14.0
-h5py==3.12.1
-httplib2==0.22.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
-joblib==1.4.2
-keras==3.6.0
-kiwisolver==1.4.7
-kombu==5.4.2
-libclang==18.1.1
 lxml==5.3.0
 Mako==1.3.5
 Markdown==3.7
-markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib==3.9.2
-mdurl==0.1.2
-ml-dtypes==0.4.1
-more-itertools==10.5.0
-msgspec==0.18.6
-namex==0.0.8
-npm==0.1.1
-numpy==1.26.4
+msgspec==0.18.6 # Might be a transitive dependency, keep if unsure
+numpy==1.26.4 # Might be a transitive dependency, keep if unsure
 oauthlib==3.2.2
-opt_einsum==3.4.0
-optional-django==0.1.0
-optree==0.13.0
 packaging==24.1
-pandas==2.2.3
-patool==2.4.0
 pillow==10.4.0
-plotly==5.24.1
-plyer==2.1.0
-premailer==3.10.0
 prompt_toolkit==3.0.48
-proto-plus==1.24.0
-protobuf==4.25.5
-psycopg2==2.9.10
-psycopg2-binary==2.9.10
+psycopg2-binary==2.9.10 # If you are using PostgreSQL. If not, remove and Flask-SQLAlchemy line above. Use psycopg2 if you have system-level postgresql libs
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
-pycodestyle==2.12.1
 pycparser==2.22
-pygame==2.6.1
 Pygments==2.18.0
-PyJWT==2.10.1
-pymessenger==0.0.7.0
+PyJWT==2.10.1 # Remove if not using JWT
 pyOpenSSL==24.2.1
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
@@ -128,43 +69,21 @@ python-dotenv==1.0.1
 python-engineio==4.9.1
 python-socketio==5.11.4
 pytz==2024.2
-pyunpack==0.3
 PyYAML==6.0.2
-rarfile==4.2
-ratelim==0.1.6
-redis==5.1.1
 requests==2.32.3
 requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
 rich==13.9.2
 rsa==4.9
-scikit-learn==1.5.2
-scipy==1.14.1
-setuptools==75.1.0
 simple-websocket==1.0.0
-six==1.16.0
+six==1.16.0 # Might be a transitive dependency, keep if unsure
 soupsieve==2.6
-SQLAlchemy==2.0.35
+SQLAlchemy==2.0.35 # If you are using SQLAlchemy for database interactions. If not, remove and the psycopg2 line above
 tenacity==9.0.0
-tensorboard==2.17.1
-tensorboard-data-server==0.7.2
-tensorflow==2.17.0
-tensorflow-intel==2.17.0
 termcolor==2.5.0
-threadpoolctl==3.5.0
-tk==0.1.0
 typing_extensions==4.12.2
-tzdata==2024.2
-unrar==0.4
-uritemplate==4.1.1
 urllib3==2.2.3
-vine==5.1.0
-visitor==0.1.3
-wcwidth==0.2.13
 Werkzeug==3.0.4
-wheel==0.44.0
 wrapt==1.16.0
 wsproto==1.2.0
 WTForms==3.1.2
-zope.event==5.0
 zope.interface==7.0.3
