--- a/.env
+++ b/.env
@@ -36,6 +36,8 @@ DB_PORT=5432
 SESSION_PERMANENT=True
 CELERY_BROKER_URL=redis://localhost:6379/0
 CELERY_RESULT_BACKEND=redis://localhost:6379/0
+FLASK_ENV=production
+FLASK_DEBUG=0
 
 
 
