responsive on BED

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "fromlist",
         "Hazina",
         "Interlectial",
+        "Interlectual",
         "jsonify",
         "Koross",
         "loggedin",
